# IMACraft

./: .gitignore  CMakeLists.txt  README.md  copy
assets/: sauvegarde.txt
assets/maps/: map.pgm  map.pnm  map2.pgm  map3.pgm  map4.pgm  map5.pgm  map6.pgm  map7.pgm  map8.pgm
assets/savefiles/: sauvegarde.txt  sauvegarde_pseudo.txt  sauvegarde_score.txt
assets/shaders/: buttonShader.fs.glsl  buttonShader.vs.glsl  hp.fs.glsl  hp.vs.glsl  lightShader.fs.glsl  lightShader.vs.glsl  shader.fs.glsl  shader.vs.glsl  shaderSteve.fs.glsl  shaderSteve.vs.glsl
lib/: CMakeLists.txt
lib/freetype/: CMakeLists.txt
lib/glfw/src/: mappings.h
lib/stb/: stb.h  stb_image.cpp
src/: App.cpp  App.hpp  Camera.cpp  Camera.hpp  Cube.cpp  Cube.hpp  Skybox.cpp  Skybox.hpp  TextureCube.cpp  TextureCube.hpp  Triangle.cpp  Triangle.h  main.cpp  shader.fs.glsl  stb.cpp  stb_image.cpp
src/LibCraft/: Cube.cpp  Cube.hpp
src/LibCraft/coreEngine/: Collectible.cpp  Enemy.cpp  HP.cpp  HUD.cpp  Hitbox.cpp  Map.cpp  Player.cpp  Sauvegarde.cpp
src/LibCraft/coreEngine/include/: Collectible.hpp  Enemy.hpp  HP.hpp  HUD.hpp  Hitbox.hpp  Map.hpp  MapElement.hpp  Player.hpp  Sauvegarde.hpp
src/LibCraft/renderEngine/: Button.cpp  Camera.cpp  Cube.cpp  HUD.cpp  KeyBoardListener.cpp  Light.cpp  Mesh.cpp  Model.cpp  ModelCube.cpp  Rectangle.cpp  Sauvegarde.cpp  Shader.cpp  Shader.hpp  Skybox.cpp  Text.cpp  Texture.cpp  Texture.hpp  TextureCube.cpp  Vertex.hpp  ibo.cpp  vao.cpp  vao.hpp  vbo.cpp  vbo.hpp
src/LibCraft/renderEngine/include/: Button.hpp  Camera.hpp  Cube.hpp  HUD.hpp  Light.hpp  Mesh.hpp  Model.hpp  ModelCube.hpp  Rectangle.hpp  Sauvegarde.hpp  Shader.hpp  Skybox.hpp  Text.hpp  Texture.hpp  TextureCube.hpp  Vertex.hpp  Vertex2D.hpp  ibo.hpp  vao.hpp  vbo.hpp
src/LibCraft/renderEngine/scenes/: GameScene.cpp  LooseScene.cpp  MainMenuScene.cpp  PauseMenuScene.cpp  ScoreScene.cpp  WinScene.cpp
src/LibCraft/tools/: countSpaceInString.cpp  deleteElementsFromVector.cpp  getFileContent.cpp
src/LibCraft/tools/include/: countSpaceInString.hpp  deleteElementsFromVector.hpp  filePath.hpp  getFIleContent.hpp
